First commited as before_28437_rev1