@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2015 IBM Corporation and others.
+ * Copyright (c) 2007, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,14 +7,12 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Wang Yizhuo (wangyizhuo@gmail.com) - patch (see Bugzilla #239178)
- *     Simon Scholz <simon.scholz@vogella.com> - Bug 430205, 458055
+ *     Wang Yizhuo (wangyizhuo@gmail.com) - patch (see Bugzilla #239178) 
  *******************************************************************************/
 package org.eclipse.ui.internal.forms.widgets;
 
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.Map;
 
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.jface.resource.LocalResourceManager;
@@ -36,15 +34,15 @@ public class FormImages {
 	}
 
 	private ResourceManagerManger manager = new ResourceManagerManger();
-	private Map descriptors;
-
+	private HashMap descriptors;
+	
 	private FormImages() {
 	}
-
+	
 	private abstract class AbstractImageDescriptor extends ImageDescriptor {
 		RGB[] fRGBs;
 		int fLength;
-
+		
 		AbstractImageDescriptor(Color[] colors, int length) {
 			fRGBs = new RGB[colors.length];
 			for (int i = 0; i < colors.length; i++) {
@@ -53,7 +51,7 @@ public class FormImages {
 			}
 			fLength = length;
 		}
-
+		
 		public boolean equals(Object obj) {
 			if (obj instanceof AbstractImageDescriptor) {
 				AbstractImageDescriptor id = (AbstractImageDescriptor)obj;
@@ -67,7 +65,7 @@ public class FormImages {
 			}
 			return false;
 		}
-
+		
 		public int hashCode() {
 			int hash = 0;
 			for (int i = 0; i < fRGBs.length; i++)
@@ -76,18 +74,18 @@ public class FormImages {
 			return hash;
 		}
 	}
-
+	
 	private class SimpleImageDescriptor extends AbstractImageDescriptor{
 		private int fTheight;
 		private int fMarginHeight;
-
+		
 		SimpleImageDescriptor (Color color1, Color color2,
 				int realtheight, int theight, int marginHeight) {
 			super(new Color[] {color1, color2}, realtheight);
 			fTheight = theight;
 			fMarginHeight = marginHeight;
 		}
-
+		
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -97,7 +95,7 @@ public class FormImages {
 			}
 			return false;
 		}
-
+		
 		public int hashCode() {
 			int hash = super.hashCode();
 			hash = hash * 7 + new Integer(fTheight).hashCode();
@@ -108,7 +106,7 @@ public class FormImages {
 		public ImageData getImageData() {
 			return null;
 		}
-
+		
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color color1 = new Color(device, fRGBs[0]);
@@ -126,12 +124,12 @@ public class FormImages {
 			return image;
 		}
 	}
-
+	
 	private class ComplexImageDescriptor extends AbstractImageDescriptor {
 		RGB fBgRGB;
 		boolean fVertical;
 		int[] fPercents;
-
+		
 		public ComplexImageDescriptor(Color[] colors, int length,
 				int[] percents, boolean vertical, Color bg) {
 			super(colors, length);
@@ -139,7 +137,7 @@ public class FormImages {
 			fVertical = vertical;
 			fPercents = percents;
 		}
-
+		
 		public boolean equals(Object obj) {
 			if (obj instanceof ComplexImageDescriptor) {
 				ComplexImageDescriptor id = (ComplexImageDescriptor) obj;
@@ -159,10 +157,10 @@ public class FormImages {
 			}
 			return false;
 		}
-
+		
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Boolean.valueOf(fVertical).hashCode();
+			hash = hash * 7 + new Boolean(fVertical).hashCode();
 			for (int i = 0; i < fPercents.length; i++)
 				hash = hash * 7 + new Integer(fPercents[i]).hashCode();
 			return hash;
@@ -171,7 +169,7 @@ public class FormImages {
 		public ImageData getImageData() {
 			return null;
 		}
-
+		
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			int width = fVertical ? 1 : fLength;
 			int height = fVertical ? fLength : 1;
@@ -212,13 +210,13 @@ public class FormImages {
 					gc.setBackground(lastColor);
 					if (vertical) {
 						int gradientHeight = percents[i] * height / 100;
-
+						
 						gc.fillGradientRectangle(0, pos, width, gradientHeight,
 								true);
 						pos += gradientHeight;
 					} else {
 						int gradientWidth = percents[i] * width / 100;
-
+						
 						gc.fillGradientRectangle(pos, 0, gradientWidth, height,
 								false);
 						pos += gradientWidth;
@@ -238,91 +236,7 @@ public class FormImages {
 			}
 		}
 	}
-
-	private class SimpleSectionImageDescriptor extends AbstractImageDescriptor {
-		protected int fTheight;
-		protected int fMarginHeight;
-
-		SimpleSectionImageDescriptor(Color[] colors, int realtheight, int theight, int marginHeight) {
-			super(colors, realtheight);
-			fTheight = theight;
-			fMarginHeight = marginHeight;
-		}
-
-		public boolean equals(Object obj) {
-			if (obj instanceof SimpleImageDescriptor) {
-				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
-				if (super.equals(obj) && id.fTheight == fTheight && id.fMarginHeight == fMarginHeight)
-					return true;
-			}
-			return false;
-		}
-
-		public int hashCode() {
-			int hash = super.hashCode();
-			hash = hash * 7 + new Integer(fTheight).hashCode();
-			hash = hash * 7 + new Integer(fMarginHeight).hashCode();
-			return hash;
-		}
-
-		public ImageData getImageData() {
-			return null;
-		}
-
-		public Image createImage(boolean returnMissingImageOnError, Device device) {
-			Image image = new Image(device, 1, fLength);
-			Color originalBgColor = new Color(device, fRGBs[0]);
-			Color color1 = new Color(device, fRGBs[1]);
-			image.setBackground(originalBgColor);
-			GC gc = new GC(image);
-			gc.setBackground(color1);
-			gc.fillRectangle(0, fMarginHeight + 2, 1, fTheight - fMarginHeight - 3);
-			gc.setBackground(originalBgColor);
-			gc.fillRectangle(0, fTheight - fMarginHeight - 4, 1, 4);
-			gc.dispose();
-			color1.dispose();
-			originalBgColor.dispose();
-			return image;
-		}
-	}
-
-	private class SimpleSectionGradientImageDescriptor extends SimpleSectionImageDescriptor {
-
-		SimpleSectionGradientImageDescriptor(Color color1, Color color2, int realtheight,
-				int theight,
-				int marginHeight) {
-			super(new Color[] { color1, color2 }, realtheight, theight, marginHeight);
-		}
-
-		public Image createImage(boolean returnMissingImageOnError, Device device) {
-			Image image = new Image(device, 1, fLength);
-			Color color1 = new Color(device, fRGBs[0]);
-			Color color2 = new Color(device, fRGBs[1]);
-			image.setBackground(color1);
-			GC gc = new GC(image);
-			gc.setBackground(color1);
-			gc.fillRectangle(0, 0, 1, fLength);
-			gc.setForeground(color2);
-			gc.setBackground(color1);
-			gc.fillGradientRectangle(0, fMarginHeight + 2, 1, fTheight - 2, true);
-			gc.dispose();
-			color1.dispose();
-			color2.dispose();
-
-			return image;
-		}
-
-	}
-
-	public Image getSectionGradientImage(Color color1, Color color2, int realtheight, int theight, int marginHeight,
-			Display display) {
-		if (color1 == null || color1.isDisposed())
-			return null;
-		AbstractImageDescriptor desc = new SimpleSectionGradientImageDescriptor(color1, color2,
-				realtheight, theight, marginHeight);
-		return getGradient(desc, display);
-	}
-
+	
 	public Image getGradient(Color color1, Color color2,
 			int realtheight, int theight, int marginHeight, Display display) {
 		if (color1 == null || color1.isDisposed() || color2 == null || color2.isDisposed())
@@ -330,7 +244,7 @@ public class FormImages {
 		AbstractImageDescriptor desc = new SimpleImageDescriptor(color1, color2, realtheight, theight, marginHeight);
 		return getGradient(desc, display);
 	}
-
+	
 	public Image getGradient(Color[] colors, int[] percents,
 			int length, boolean vertical, Color bg, Display display) {
 		if (colors.length == 0)
@@ -343,30 +257,28 @@ public class FormImages {
 		AbstractImageDescriptor desc = new ComplexImageDescriptor(colors, length, percents, vertical, bg);
 		return getGradient(desc, display);
 	}
-
+	
 	private synchronized Image getGradient(AbstractImageDescriptor desc, Display display) {
 		checkHashMaps();
 		Image result = manager.getResourceManager(display).createImage(desc);
-		descriptors.put(new Integer(result.hashCode()), desc);
+		descriptors.put(result, desc);
 		return result;
 	}
-
+	
 	public synchronized boolean markFinished(Image image, Display display) {
 		checkHashMaps();
-		Integer imageHashCode = new Integer(image.hashCode());
-		AbstractImageDescriptor desc = (AbstractImageDescriptor)descriptors.get(imageHashCode);
+		AbstractImageDescriptor desc = (AbstractImageDescriptor)descriptors.get(image);
 		if (desc != null) {
 			LocalResourceManager resourceManager = manager.getResourceManager(display);
 			resourceManager.destroyImage(desc);
 			if (resourceManager.find(desc) == null) {
-				descriptors.remove(imageHashCode);
+				descriptors.remove(image);
 				validateHashMaps();
 			}
 			return true;
 		}
 		// if the image was not found, dispose of it for the caller
 		image.dispose();
-		validateHashMaps();
 		return false;
 	}
 
@@ -374,7 +286,7 @@ public class FormImages {
 		if (descriptors == null)
 			descriptors = new HashMap();
 	}
-
+	
 	private void validateHashMaps() {
 		if (descriptors.size() == 0)
 			descriptors = null;
