@@ -27,9 +27,9 @@ import org.eclipse.ui.views.markers.MarkerItem;
 
 /**
  * MarkerCompletionField is the class that specifies the completion entry.
- *
+ * 
  * @since 3.4
- *
+ * 
  */
 public class MarkerCompletionField extends MarkerField {
 
@@ -39,7 +39,7 @@ public class MarkerCompletionField extends MarkerField {
 
 		/**
 		 * Create a new instance of the receiver.
-		 *
+		 * 
 		 * @param viewer
 		 */
 		public CompletionEditingSupport(ColumnViewer viewer) {
@@ -50,10 +50,9 @@ public class MarkerCompletionField extends MarkerField {
 
 		/*
 		 * (non-Javadoc)
-		 *
+		 * 
 		 * @see org.eclipse.jface.viewers.EditingSupport#canEdit(java.lang.Object)
 		 */
-		@Override
 		protected boolean canEdit(Object element) {
 			if (element instanceof MarkerEntry)
 				return ((MarkerEntry) element).getAttributeValue(
@@ -63,32 +62,29 @@ public class MarkerCompletionField extends MarkerField {
 
 		/*
 		 * (non-Javadoc)
-		 *
+		 * 
 		 * @see org.eclipse.jface.viewers.EditingSupport#getCellEditor(java.lang.Object)
 		 */
-		@Override
 		protected CellEditor getCellEditor(Object element) {
 			return editor;
 		}
 
 		/*
 		 * (non-Javadoc)
-		 *
+		 * 
 		 * @see org.eclipse.jface.viewers.EditingSupport#getValue(java.lang.Object)
 		 */
-		@Override
 		protected Object getValue(Object element) {
-			return Boolean.valueOf(((MarkerEntry) element).getAttributeValue(
+			return new Boolean(((MarkerEntry) element).getAttributeValue(
 					IMarker.DONE, false));
 		}
 
 		/*
 		 * (non-Javadoc)
-		 *
+		 * 
 		 * @see org.eclipse.jface.viewers.EditingSupport#setValue(java.lang.Object,
 		 *      java.lang.Object)
 		 */
-		@Override
 		protected void setValue(Object element, Object value) {
 			MarkerEntry entry = (MarkerEntry) element;
 			Boolean booleanValue = (Boolean) value;
@@ -119,38 +115,35 @@ public class MarkerCompletionField extends MarkerField {
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#compare(org.eclipse.ui.internal.provisional.views.markers.api.MarkerItem,
 	 *      org.eclipse.ui.internal.provisional.views.markers.api.MarkerItem)
 	 */
-	@Override
 	public int compare(MarkerItem item1, MarkerItem item2) {
 		return getDoneConstant(item2) - getDoneConstant(item1);
 	}
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.internal.provisional.views.markers.MarkerField#getColumnHeaderText()
 	 */
-	@Override
 	public String getColumnHeaderText() {
 		return MarkerSupportInternalUtilities.EMPTY_STRING;
 	}
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getColumnTooltipText()
 	 */
-	@Override
 	public String getColumnTooltipText() {
 		return getName();
 	}
 
 	/**
 	 * Return the image for task completion.
-	 *
+	 * 
 	 * @return Image
 	 */
 	private Image getCompleteImage() {
@@ -160,17 +153,16 @@ public class MarkerCompletionField extends MarkerField {
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getDefaultColumnWidth(org.eclipse.swt.widgets.Control)
 	 */
-	@Override
 	public int getDefaultColumnWidth(Control control) {
 		return 40;
 	}
 
 	/**
 	 * Return the constant that indicates whether or not the receiver is done
-	 *
+	 * 
 	 * @param item
 	 * @return 1 if it is done, 0 if it not and -1 if it cannot be determined.
 	 */
@@ -190,10 +182,9 @@ public class MarkerCompletionField extends MarkerField {
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getEditingSupport(org.eclipse.jface.viewers.ColumnViewer)
 	 */
-	@Override
 	public EditingSupport getEditingSupport(ColumnViewer viewer) {
 
 		return new CompletionEditingSupport(viewer);
@@ -201,7 +192,7 @@ public class MarkerCompletionField extends MarkerField {
 
 	/**
 	 * Get the image for item.
-	 *
+	 * 
 	 * @param element
 	 * @return Image
 	 */
@@ -220,20 +211,18 @@ public class MarkerCompletionField extends MarkerField {
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.internal.provisional.views.markers.MarkerField#getValue(org.eclipse.ui.internal.provisional.views.markers.MarkerItem)
 	 */
-	@Override
 	public String getValue(MarkerItem item) {
 		return MarkerSupportInternalUtilities.EMPTY_STRING;
 	}
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
 	 * @see org.eclipse.ui.views.markers.MarkerField#update(org.eclipse.jface.viewers.ViewerCell)
 	 */
-	@Override
 	public void update(ViewerCell cell) {
 		super.update(cell);
 		cell.setImage(getImage(cell.getElement()));
